--- a/WebContent/CSS/main.css
+++ b/WebContent/CSS/main.css
@@ -1,27 +1,48 @@
 body{
     background-color: #1b1b1b;
 }
-
-.container {
-    width: 960px;
-    margin: 0 auto;
+.header{
+    width:100%;
+    height:50px;
+    background-color: #1b1b1b;
 }
+.wrapper{
+    width:100%;
+    height:100%;
 
-.chart{
-    width: 20%;
-    height: 200px;
-    background-color: #FFF;
-    float: left;
+    background-color: black;
+
+}
+.datetime{
+    width:10%;
+    height:46px;
+
+    border-bottom-color: #a9a9a9;
+    border-bottom-color: rgba(255,255,255,.25);
+    float:left;
+}
+.container {
+    width: 80%;
+    height:80%;
+    margin: 0 auto;
+    background-color: black;
+    float:right;
 }
 .map{
     float: right;
-    width: 80%;
-    border: 1px #FFF solid;
+    width: 100%;
+
+    background-color:black;
+    border-bottom-color: #000000;
 }
 
 .slider{
-    margin-top: 20px;
+    margin-left: 20px;
     width: 100%;
-    background-color: #FFF;
+    heigth:20%;
+    float:right;
+
+    background-color: black;
+    border-top-color: black;
 
 }
